[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fight.gd" type="Script" id=1]

[node name="Fight" type="Node2D"]
script = ExtResource( 1 )

[node name="Hand" type="Node2D" parent="."]

[node name="Draw" type="Button" parent="."]
margin_left = 100.0
margin_top = 81.8949
margin_right = 300.0
margin_bottom = 181.895
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
margin_left = 700.0
margin_top = 81.8949
margin_right = 900.0
margin_bottom = 181.895
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="Label" parent="."]
margin_left = 427.113
margin_top = 89.4543
margin_right = 554.113
margin_bottom = 106.454
text = "Player HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHealth" type="Label" parent="."]
margin_left = 427.113
margin_top = 119.0
margin_right = 554.113
margin_bottom = 106.454
text = "Enemy HP:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Draw" to="." method="_on_Draw_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
